--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install",
+    "build": "npm install && react-scripts build",
     "start": "node index",
-    "dev": "nodemon index"
+    "dev": "nodemon index",
+    "react": "react-scripts start"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pavittarx/jseng.git"
+    "url": "git+https://github.com/pavittarx/onpar.git"
   },
   "keywords": [
     "mongodb",
@@ -20,11 +21,9 @@
   ],
   "author": "pavittarx",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/pavittarx/jseng/issues"
-  },
-  "homepage": "https://github.com/pavittarx/jseng#readme",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -32,9 +31,26 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "^4.0.1",
+    "styled-components": "^5.2.1",
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
